# krust-gpu

./: .gitignore  Cargo.toml  LICENSE.md  README.md
assets/: gpu-renderer.webm  head.glb  test.glb
src/: lib.rs  main.rs
src/primitives/: aabb.rs  camera.rs  hit.rs  lights.rs  material.rs  mod.rs  pixel_buffer.rs  primitive.rs  ray.rs  scene.rs  sphere.rs  tri_mesh.rs  triangle.rs
src/process/: bvh.rs  bvh_ml.rs  glb.rs  mod.rs  pipeline.rs  sdf.rs
src/render/: state.rs
src/shaders/: compute_camera_rays.wgsl  compute_direct_diffuse.wgsl  compute_direct_specular.wgsl  compute_indirect_diffuse.wgsl  compute_indirect_specular.wgsl  compute_sss.wgsl  compute_traversal.wgsl  functions.wgsl  ggx.wgsl  shader.wgsl  structs.wgsl  traversal_buffers.wgsl
src/wasm/: state.rs
web/: .firebaserc  README.md  package-lock.json  package.json
web/.firebase/: hosting.YnVpbGQ.cache
web/src/: App.css  App.js
web/src/components/: SliderInput.js  SliderInput.module.css
